--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <section>
+      <header>
+        <a href="#">
+          <img src="images/logo.png" class="logo" alt="logo" />
+        </a>
+        <ul>
+          <li><a href="#">Homes</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">What's new</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </header>
+    </section>
+  </body>
 </html>
