--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
+      <div class="content">
+        <div class="textBox">
+          <h2>It's not just Coffee<br />It's <span>Starbucks</span></h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas
+            accusantium, sed ea quidem tempora dolore ratione repellendus nemo
+            dignissimos fuga deserunt minus est ad labore amet quo recusandae
+            nulla voluptate?
+          </p>
+          <a href="#">Learn more</a>
+        </div>
+        <div class="imgBox">
+          <img src="images/img1.png" alt="" class="starbucks" />
+        </div>
+      </div>
     </section>
   </body>
 </html>
