--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
           <img src="images/img1.png" alt="" class="starbucks" />
         </div>
       </div>
+      <ul class="thumb">
+        <li>
+          <img src="images/thumb1.png" alt="" />
+        </li>
+        <li>
+          <img src="images/thumb2.png" alt="" />
+        </li>
+        <li>
+          <img src="images/thumb3.png" alt="" />
+        </li>
+      </ul>
     </section>
   </body>
 </html>
