--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
           <img src="images/thumb3.png" alt="" />
         </li>
       </ul>
+      <ul class="sci">
+        <li>
+          <a href="#"><img src="images/facebook.png" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="images/twitter.png" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="images/instagram.png" /></a>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
