--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <section>
+      <div class="circle"></div>
       <header>
         <a href="#">
           <img src="images/logo.png" class="logo" alt="logo" />
@@ -38,13 +39,22 @@
       </div>
       <ul class="thumb">
         <li>
-          <img src="images/thumb1.png" alt="" />
+          <img
+            src="images/thumb1.png"
+            onclick="imgSlider('images/img1.png'); changeCircleColor('#017143')"
+          />
         </li>
         <li>
-          <img src="images/thumb2.png" alt="" />
+          <img
+            src="images/thumb2.png"
+            onclick="imgSlider('images/img2.png'); changeCircleColor('#eb7495')"
+          />
         </li>
         <li>
-          <img src="images/thumb3.png" alt="" />
+          <img
+            src="images/thumb3.png"
+            onclick="imgSlider('images/img3.png'); changeCircleColor('#b752b1')"
+          />
         </li>
       </ul>
       <ul class="sci">
