--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#">
           <img src="images/logo.png" class="logo" alt="logo" />
         </a>
+        <div class="toggle" onclick="toggleMenu()"></div>
         <ul>
           <li><a href="#">Homes</a></li>
           <li><a href="#">Menu</a></li>
