--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <img src="images/logo.png" class="logo" alt="logo" />
         </a>
         <div class="toggle" onclick="toggleMenu()"></div>
-        <ul>
+        <ul class="navigation">
           <li><a href="#">Homes</a></li>
           <li><a href="#">Menu</a></li>
           <li><a href="#">What's new</a></li>
